MDEV-30016 Virtual columns do not support autoincrement columns

change vcol_upgrade test to use stored gcols